feat: add webRTC player for webcams
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -663,6 +663,7 @@
       "MjpegstreamerAdaptive": "Adaptive MJPEG-Streamer (experimental)",
       "Uv4lMjpeg": "UV4L-MJPEG",
       "Ipstream": "IP Camera",
+      "WebRTC": "WebRTC",
       "Required": "required",
       "NameAlreadyExists": "Name already exists",
       "Name": "Name",
